--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         kotlin_version = "1.4.20"
         nav_version = "2.3.0"
+        app_compat_version = "28.0.0"
     }
     repositories {
         google()
@@ -12,6 +13,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "com.android.support:appcompat-v7:$app_compat_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
