--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
 
     defaultConfig {
         applicationId "com.udacity.shoestore"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
         vectorDrawables.useSupportLibrary = true
         versionCode 1
@@ -54,4 +54,5 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "com.android.support:appcompat-v7:$app_compat_version"
+    implementation "androidx.cardview:cardview:1.0.0"
 }
